--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 .hintrc
+# Node.js
+/node_modules
+
+# Compiled output
+/dist
+/build
+
+# Dependency directories
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# IDEs and editors
+/.idea
+/.vscode
+*.sublime-project
+*.sublime-workspace
+
+# OS generated files
+.DS_Store
+Thumbs.db
